Fixed Comment Area
Now is more responsive than ever!

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -843,20 +843,22 @@ body {
   position: relative;
   min-height: 90px;
 }
-.main-content .comments-area ul.comment-list li.comment .comment-body .comment-author img.avatar {
-  float: left;
-  width: 60px;
-  height: 60px;
-  margin-right: 10px;
+@media screen and (max-width: 520px) {
+  .main-content .comments-area ul.comment-list li.comment .comment-body .media-left {
+    display: none;
+  }
 }
-.main-content .comments-area ul.comment-list li.comment .comment-body .comment-author .fn {
+.main-content .comments-area ul.comment-list li.comment .comment-body h6 {
   font-weight: 700;
   font-size: 14px;
   font-style: normal;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 .main-content .comments-area ul.comment-list li.comment .comment-body .comment-meta {
   font-size: 10px;
   font-style: italic;
+  margin-bottom: 5px;
 }
 .main-content .comments-area ul.comment-list li.comment .comment-body .comment-meta a {
   color: #DDD;
@@ -868,17 +870,7 @@ body {
   font-size: 12px;
 }
 .main-content .comments-area ul.comment-list li.comment .comment-body .reply {
-  position: absolute;
-  top: 15px;
-  right: 15px;
-}
-@media screen and (max-width: 782px) {
-  .main-content .comments-area ul.comment-list li.comment .comment-body .reply {
-    position: relative;
-    text-align: right;
-    top: 0;
-    right: 0;
-  }
+  float: right;
 }
 .main-content .comments-area ul.comment-list li.comment .comment-body .reply .comment-reply-link {
   display: inline-block;
@@ -918,6 +910,14 @@ body {
   background-color: #F77A35;
   color: #FFF;
 }
+.main-content .comments-area .comment-respond form > div {
+  margin-left: 47px !important;
+}
+@media screen and (max-width: 993px) {
+  .main-content .comments-area .comment-respond form > div {
+    margin-left: 0 !important;
+  }
+}
 .main-content .comments-area .comment-respond .logged-in-as {
   display: none;
   visibility: hidden;
@@ -948,6 +948,11 @@ body {
   transform: translate(0, 0);
   font-size: 0px;
 }
+@media screen and (max-width: 520px) {
+  .main-content .comments-area .comment-respond .comment-form-comment label {
+    display: none;
+  }
+}
 .main-content .comments-area .comment-respond .comment-form-comment label:before {
   content: "\f075";
   font-size: 16px;
@@ -956,7 +961,13 @@ body {
   max-width: 100%;
 }
 .main-content .comments-area .comment-respond .form-submit {
-  text-align: right;
+  margin-left: 47px;
+  margin-bottom: 25px;
+}
+@media screen and (max-width: 993px) {
+  .main-content .comments-area .comment-respond .form-submit {
+    margin-left: 0px;
+  }
 }
 .main-content .comments-area .comment-respond .form-submit input.submit {
   display: inline-block;
@@ -991,6 +1002,7 @@ body {
   border-radius: 5px 5px 5px 5px;
   border: none;
   background-color: #FF5B5B;
+  outline: none;
 }
 .main-content .comments-area .comment-respond .form-submit input.submit:hover {
   background-color: #F77A35;
