Fixed Safari SVDW Margin bug

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -578,13 +578,13 @@ body {
                   width: 45px;
                   display: inline-block;
                   float: left;
+                  margin-right: 10px;
                 }
               }
 
               dl {
                 display: inline-block;
                 margin-bottom: 0;
-                margin-left: 10px;
 
                 dt.player-name {
                   font-weight: 700;
