--- a/assets/css/bbpress.less
+++ b/assets/css/bbpress.less
@@ -902,9 +902,9 @@
     padding: 0 6px;
     margin: 5px 0 15px;
     border-radius: 3px;
-    background-color: #E7E7E7;
-    border-color: #E6DB55;
-    color: #999;
+    background-color: #FFFABA;
+    border-color: #e6db55;
+    color: #666;
     clear: both;
   }
   div.bbp-template-notice a {
