--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -813,6 +813,22 @@ body {
         color: #333;
       }
 
+      block-quote {
+        padding: 10px 20px;
+        margin: 0 30px 20px;
+        border-left: 5px solid #eee;
+        
+        p {
+          margin-right: 30px;
+          margin-left: 30px;
+          margin-bottom: 0;
+          font-size: 17.5px;
+          font-weight: 700;
+          line-height: 24px;
+          color: #000;
+        }
+      }
+
       img {
         max-width: 100%;
         height: auto;
