--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -51,6 +51,19 @@ input[type="button"] {
 
 blockquote {
   font-family: "Roboto", arial, verdana, sans-serif;
+  padding: 10px 0px;
+  margin: 0 30px 20px;
+  border-left: 5px solid #eee;
+
+  p {
+    margin-right: 30px;
+    margin-left: 30px;
+    margin-bottom: 0;
+    font-size: 17.5px;
+    font-weight: 700;
+    line-height: 24px;
+    color: #000;
+  }
 }
 
 p {
@@ -804,29 +817,13 @@ body {
         margin-left: 30px;
       }
 
-      p {
+      &>p {
         margin-right: 30px;
         margin-left: 30px;
         margin-bottom: 20px;
         font-size: 14px;
         line-height: 24px;
         color: #333;
-      }
-
-      block-quote {
-        padding: 10px 20px;
-        margin: 0 30px 20px;
-        border-left: 5px solid #eee;
-        
-        p {
-          margin-right: 30px;
-          margin-left: 30px;
-          margin-bottom: 0;
-          font-size: 17.5px;
-          font-weight: 700;
-          line-height: 24px;
-          color: #000;
-        }
       }
 
       img {
