Post Thumb Css fixes

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -352,7 +352,7 @@ body {
 
   .carousel {
     margin-top: 30px;
-    padding-bottom: 41.35%;
+    padding-bottom: 41.1%;
 
     .carousel-inner {
       position: absolute;
@@ -471,10 +471,10 @@ body {
         & > a {
           display: block;
           position: relative;
-          padding-bottom: 41.35%;
+          padding-bottom: 41.1%;
           overflow: hidden;
 
-          background-color: #DDD;
+          border-bottom: 1px solid #DDD;
 
           -webkit-transform: translatez(0);
           -moz-transform: translatez(0);
@@ -685,7 +685,7 @@ body {
       }
 
       .post-thumbnail {
-        padding-bottom: 41.35%;
+        padding-bottom: 41.1%;
         display: block;
         position: relative;
         overflow: hidden;
@@ -791,7 +791,7 @@ body {
       }
 
       .post-thumbnail {
-        padding-bottom: 41.35%;
+        padding-bottom: 41.1%;
         display: block;
         position: relative;
         overflow: hidden;
