--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -119,6 +119,8 @@ a {
 img.wpml_ico {
   height: 24px;
   width: 24px;
+  margin: 0 !important;
+  padding: 0 !important;
 }
 
 /*---------------------------------
