Added padding-bottom to video

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -1550,6 +1550,7 @@ body {
 -----------------------------------*/
 .wp-video {
   width: auto !important;
+  padding-bottom: 20px;
 }
 
 .mejs-container {
