--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -490,6 +490,23 @@ body {
             width: auto;
             max-width: none;
           }
+
+          .fa {
+            position: absolute;
+            font-size: 50px;
+            width: 100%;
+            text-align: center;
+            top: 50%;
+            margin-top: -25px;
+            text-shadow: 0 0 30px rgba(0,0,0,0.5);
+            z-index: 1;
+            color: #ff5b5b;
+            transition: color .25s ease-in-out;
+
+            &:hover {
+              color: white;
+            }
+          }
         }
         h3 {
           font-size: 14px;
@@ -704,6 +721,23 @@ body {
           width: auto;
           min-width: 100%;
         }
+
+        .fa {
+          position: absolute;
+          font-size: 80px;
+          width: 100%;
+          text-align: center;
+          top: 50%;
+          margin-top: -40px;
+          text-shadow: 0 0 30px rgba(0,0,0,0.5);
+          z-index: 1;
+          color: #ff5b5b;
+          transition: color .25s ease-in-out;
+
+          &:hover {
+            color: white;
+          }
+        }
       }
 
       h2 {
@@ -809,6 +843,52 @@ body {
           min-height: 100%;
           width: auto;
           min-width: 100%;
+        }
+
+        .fa {
+          position: absolute;
+          font-size: 80px;
+          width: 100%;
+          text-align: center;
+          top: 50%;
+          margin-top: -40px;
+          text-shadow: 0 0 5px rgba(0,0,0,0.5);
+          z-index: 1;
+          color: #ff5b5b;
+          transition: color .25s ease-in-out;
+        }
+
+        &:hover {
+          cursor: pointer;
+
+          .fa {
+            color: white;
+          }
+        }
+
+        &.main-video {
+          iframe {
+            display: none;
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 100%;
+          }
+
+          &.active {
+            padding-bottom: 56.25%;
+
+            iframe {
+              display: block;
+            }
+
+            &> img {
+              display: none;
+            }
+            &>.fa {
+              display: none;
+            }
+          }
         }
       }
 
