Added Carousel Play Icon

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -375,6 +375,11 @@ body {
 
           h3 {
             margin: 0;
+
+            .fa {
+              margin-right: 6px;
+              color: #ff5b5b !important;
+            }
           }
         }
       }
