Added play icon to posts with video, removed it from thumbnail

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -495,29 +495,17 @@ body {
             width: auto;
             max-width: none;
           }
-
-          .fa {
-            position: absolute;
-            font-size: 50px;
-            width: 100%;
-            text-align: center;
-            top: 50%;
-            margin-top: -25px;
-            text-shadow: 0 0 30px rgba(0,0,0,0.5);
-            z-index: 1;
-            color: #ff5b5b;
-            transition: color .25s ease-in-out;
-
-            &:hover {
-              color: white;
-            }
-          }
         }
         h3 {
           font-size: 14px;
           text-transform: uppercase;
           margin-top: 0px;
           min-height: 30px;
+
+          .fa {
+            margin-right: 3px;
+          color: #777 !important;
+        }
         }
         .caption {
           padding-bottom: 0;
@@ -726,23 +714,6 @@ body {
           width: auto;
           min-width: 100%;
         }
-
-        .fa {
-          position: absolute;
-          font-size: 80px;
-          width: 100%;
-          text-align: center;
-          top: 50%;
-          margin-top: -40px;
-          text-shadow: 0 0 30px rgba(0,0,0,0.5);
-          z-index: 1;
-          color: #ff5b5b;
-          transition: color .25s ease-in-out;
-
-          &:hover {
-            color: white;
-          }
-        }
       }
 
       h2 {
@@ -750,6 +721,11 @@ body {
         font-size: 20px;
         margin-right: 30px;
         margin-left: 30px;
+
+        .fa {
+          margin-right: 6px;
+          color: #777 !important;
+        }
       }
 
       p {
