--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -906,6 +906,7 @@ body {
         height: 0;
         overflow: hidden;
         margin-bottom: 20px;
+        width: 100%;
 
         iframe {
           width: 100%;
