--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -971,7 +971,7 @@ body {
     float: left;
     width: 100%;
     .comments-title {
-    }6
+    }
     ul.comment-list {
       margin: 0;
       padding: 0;
