Added Sportspress support

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -10,6 +10,7 @@ Version: 1.0
 -----------------------------------*/
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,700);
 @import url(animate.css);
+@import url(sportspress.less);
 
 /*---------------------------------
 	CUSTOM FONTS
