--- a/assets/css/sportspress.less
+++ b/assets/css/sportspress.less
@@ -1,175 +1,268 @@
-/* SportsPress */
-.sp-view-all-link {
-  color: #a3a3a3;
+.sportspress {
+  .sp-template-event-logos {
+    background-color: #333;
+    background-image: url(../img/stripe.png);
+    background-repeat: repeat;
+    background-position: left center;
+    padding: 20px;
+
+    .sp-event-logos {
+      background-image: linear-gradient(to top, #C43E2F, #D16428);
+      display: inline-block;
+      font-size: 16px;
+      text-transform: uppercase;
+      color: rgba(0, 0, 0, 0.5);
+      font-weight: 600;
+
+      .sp-team-logo {
+        display: inline-block;
+        padding: 15px;
+
+        a {
+          color: #FFF;
+
+          .sp-team-name {
+            width: 160px;
+            display: inline-block;
+            text-align: center;
+            transition: color .3s;
+
+            &:hover {
+              color: rgba(0, 0, 0, 0.5);
+            }
+          }
+          img {
+            display: inline;
+            vertical-align: middle;
+            height: 90px;
+            width: 90px;
+          }
+        }
+        .sp-team-result {
+          display: inline-block;
+          width: 30px;
+          height: 30px;
+          line-height: 31px;
+          color: #FFF;
+          background-image: linear-gradient(to bottom, #C43E2F, #D16428);
+          background-repeat: no-repeat;
+          background-position: right;
+          background-size: auto 100%;
+          border-radius: 5px;
+          box-shadow: 0 0px 3px rgba(0, 0, 0, .0), inset 0 2px 2px 1px rgba(0, 0, 0, 0.5);
+        }
+      }
+    }
+  }
+
+  .sp-event-performance-teams {
+    .sp-template-event-performance {
+      width: 50%;
+      display: inline-block;
+      float: left;
+
+      h4 {
+        padding: 0 10px 0 0;
+      }
+      .sp-table-wrapper {
+        padding: 0 10px 0 0;
+      }
+
+      &:last-child {
+        h4 {
+          padding: 0 0 0 10px;
+        }
+        .sp-table-wrapper {
+          padding: 0 0 0 10px;
+        }
+      }
+    }
+  }
+
+  .sp_team {
+
+  }
+
+  .sp-table-wrapper {
+    table {
+      width: 100%;
+      background-image: url(../img/stripe.png);
+      background-repeat: repeat;
+      background-position: left center;
+      background-color: #32333B;
+      font-size: 12px;
+      box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);
+      thead {
+        font-weight: bold;
+        background-image: -webkit-linear-gradient(bottom, #C43E2F, #D16428);
+        background-image: -moz-linear-gradient(bottom, #C43E2F, #D16428);
+        background-image: -o-linear-gradient(bottom, #C43E2F, #D16428);
+        background-image: linear-gradient(to top, #C43E2F, #D16428);
+        -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3), inset 0 0 1px 1px #F3AB46;
+        -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3), inset 0 0 1px 1px #F3AB46;
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3), inset 0 0 1px 1px #F3AB46;
+
+        tr {
+          th {
+            color: white;
+            padding: 10px;
+            vertical-align: middle;
+            text-align: left;
+            text-transform: capitalize;
+          }
+        }
+      }
+      tbody {
+        tr {
+          &.odd {
+            background: none;
+          }
+          &.even {
+            background: rgba(100, 100, 100, 0.2)
+          }
+          td {
+            color: white;
+            padding: 10px;
+            vertical-align: middle;
+            text-align: left;
+
+            a {
+              &:hover {
+                color: #FFF;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
-.sp-view-all-link:hover {
-  color: #C58000;
-}
+.widget_sportspress {
+  h2 {
+    width: 100%;
+    text-align: center;
+    border-radius: 0 !important;
+  }
+  .body {
+    background-color: #333;
+    background-image: url(../img/stripe.png);
+    background-repeat: repeat;
+    background-position: left center;
 
-.sp-highlight {
-  background: #fff;
-}
+    .sp-template-event-list {
+      .sp-scrollable-table-wrapper {
+        overflow: visible;
+        table {
+          thead {
+            display: none;
+          }
+          tbody {
+            tr {
+              float: left;
+              width: 100%;
+              height: 45px;
+              background-image: linear-gradient(to top, #C43E2F, #D16428);
+              background-repeat: no-repeat;
+              background-position: right;
+              background-size: auto 100%;
+              border-radius: 5px;
+              margin-bottom: 10px;
+              overflow: hidden;
+              position: relative;
 
-.sp-heading {
-  background: #2b353e;
-  color: #fff;
-}
+              td {
+                &.data-date {
+                  display: none;
+                }
+                &.data-home {
+                  width: 100%;
+                  display: block;
+                }
+                &.data-away {
+                  width: 100%;
+                  display: block;
+                }
+                &.data-time {
+                  display: none;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 
-.sp-heading:hover,
-.sp-heading a:hover {
-  color: #fff;
-}
+  &.widget_sp_countdown {
+    .header {
+      background-color: #333;
+      background-image: url(../img/stripe.png);
+      background-repeat: repeat;
+      background-position: left center;
+      color: #fff;
 
-.sp-table-caption {
-  color: #fff;
-  background: #2b353e;
-  border-top: 8px solid #C58000;
-  padding: 0.625em 15px;
-}
+      h2 {
+        background-image: linear-gradient(to top, #c43e2f, #d16428);
+        display: inline-block;
+        margin: 0;
+        padding: 10px 25px 10px 15px;
+        font-size: 16px;
+        text-transform: uppercase;
+        border-radius: 0;
+        width: 100%;
+        text-align: center;
+      }
+    }
 
-.sp-template-event-performance-icons tbody td {
-  padding: 0.3125em 0.625em;
-}
+    .sp-countdown-wrapper {
+      .event-name {
+        display: block;
+        float: left;
+        margin: 0;
 
-.sp-event-staff {
-  background: #f4f4f4;
-  border: 1px solid #e0e0e0;
-}
+        .logo-odd {
+          float: left;
+          margin-right: 10px;
+          display: block;
+          height: 80px;
+          width: 80px;
+          margin: 0;
+        }
+        .logo-even {
+          float: right;
+          margin-left: 10px;
+          display: block;
+          width: 80px;
+          height: 80px;
+          margin: 0;
+        }
+        a {
+          text-align: center;
+          font-size: 20px;
+          display: block;
+          float: left;
+          padding: 5px 5px 10px;
+          max-width: none;
+          font-size: 17px;
+          width: 100%;
 
-.sp-table-wrapper .dataTables_paginate {
-  background: #f4f4f4;
-  color: #a3a3a3;
-  border: 1px solid #e0e0e0;
-}
-
-.sp-template-countdown .event-name {
-  font-weight: bold;
-  text-align: left;
-  font-size: 14px;
-  padding: 0.635em 15px;
-  color: #222;
-}
-
-.sp-template-countdown .event-name a {
-  color: #222;
-}
-
-.sp-template-countdown .event-name,
-.sp-template-countdown .event-venue,
-.sp-template-countdown .event-league {
-  background: #f4f4f4;
-  border: 1px solid #e0e0e0;
-}
-
-.sp-template-countdown .event-venue,
-.sp-template-countdown .event-league {
-  border-top: none;
-}
-
-.sp-template-countdown .event-venue,
-.sp-template-countdown .event-league {
-  font-weight: normal;
-}
-
-.sp-template-countdown time span {
-  border-right: 1px solid #e0e0e0;
-  border-bottom: 1px solid #e0e0e0;
-  background: #f4f4f4;
-}
-
-.sp-template-countdown time span:first-child {
-  border-left: 1px solid #e0e0e0;
-}
-
-.sp-template-event-logos .sp-team-result {
-  color: #fff;
-  background: #C58000;
-}
-
-.sp-template-event-venue .sp-google-map {
-  margin: 0 -1px;
-}
-
-.sp-template-event-calendar #today {
-  background: #fff;
-}
-
-.sp-template-event-calendar #prev a,
-.sp-template-event-calendar #next a {
-  color: #a3a3a3;
-}
-
-.sp-template-event-calendar #prev a:hover,
-.sp-template-event-calendar #next a:hover {
-  color: #C58000;
-}
-
-.sp-template-event-blocks .event-title {
-  color: #222;
-  background: #fff;
-  border: 1px solid #e0e0e0;
-}
-
-.sp-template-event-blocks .event-title a {
-  color: #222;
-}
-
-.sp-template-event-blocks .event-results,
-.sp-template-event-blocks .event-time {
-  text-transform: none;
-}
-
-.sp-template-details dl {
-  background: #f4f4f4;
-  border: 1px solid #e0e0e0;
-  margin-bottom: 20px;
-}
-
-.sp-template-gallery .gallery-caption {
-  background: #2b353e;
-}
-
-.sp-template-gallery .gallery-item strong {
-  background: #C58000;
-}
-
-.sp-template-post-content th,
-.sp-template-post-content td {
-  font-size: inherit;
-  text-align: inherit;
-}
-
-.sp-footer-sponsors .sp-sponsors {
-  border-top: 1px solid #e0e0e0;
-}
-
-.sp-template-tournament-bracket .sp-result {
-  color: #fff;
-  background: #C58000;
-}
-
-.sp-template-tournament-bracket .sp-event-title:hover .sp-result {
-  background: #955E00;
-}
-
-.sp-template-tournament-bracket .sp-event-venue {
-  color: #a3a3a3;
-}
-
-.single-sp_team .has-post-thumbnail .entry-header .entry-title {
-  float: left;
-}
-
-.single-sp_team .has-post-thumbnail .sp-excerpt {
-  clear: left;
-}
-
-.single-sp_player .entry-header .entry-title strong {
-  background: #C58000;
-  color: #fff;
-}
-
-.single-sp_staff .entry-header .entry-title strong {
-  color: #C58000;
+          &:hover {
+            color: #FFF;
+          }
+        }
+      }
+      .sp-countdown {
+        text-align: center;
+        color: #FFF;
+        font-weight: 600;
+        padding: 5px 0;
+        background-image: linear-gradient(to top,#c43e2f,#d16428);
+        background-repeat: no-repeat;
+        background-position: right;
+        background-size: auto 100%;
+        border-radius: 5px;
+      }
+    }
+  }
 }
