--- a/assets/css/sportspress.less
+++ b/assets/css/sportspress.less
@@ -228,6 +228,18 @@
           height: 80px;
           width: 80px;
           margin: 0;
+          padding: 0;
+          border: 2px solid transparent;
+          transition: border .3s;
+
+          &:hover {
+            border-color: #d16428;
+          }
+
+          img {
+            height: 100%;
+            width: 100%;
+          }
         }
         .logo-even {
           float: right;
@@ -236,6 +248,18 @@
           width: 80px;
           height: 80px;
           margin: 0;
+          padding: 0;
+          border: 2px solid transparent;
+          transition: border .3s;
+
+          &:hover {
+            border-color: #d16428;
+          }
+
+          img {
+            height: 100%;
+            width: 100%;
+          }
         }
         a {
           text-align: center;
